--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="I am Sudam Shrestha, a full-stack developer specializing in PHP, Laravel, Vue.js, and Tailwind CSS. Explore my portfolio to see my projects, skills, and experience in web development. Based in Dharan, Nepal, I am passionate about creating impactful and efficient web applications.">
     <meta name="keywords"
-        content="Sudam Shrestha, full stack developer, Laravel developer, PHP developer, web development, Tailwind CSS, Vue.js, Nuxt.js, Dharan, Nepal, portfolio, frontend development, backend development, software engineer">
+        content="Sudam, Sudam Shrestha, Laravel, Full Stack Developer, Code IT, PHP, Web Development, Portfolio, Nepal, Software Engineer">
     <meta property="og:title" content="Sudam Shrestha - Full Stack Developer | Portfolio">
     <meta property="og:description"
         content="Explore the portfolio of Sudam Shrestha, a skilled Full Stack Developer from Dharan, Nepal. Specializing in Laravel, PHP, Vue.js, and Tailwind CSS, showcasing my projects and skills.">
@@ -59,8 +59,7 @@
                     <!-- Desktop Menu -->
                     <div class="hidden md:flex gap-5 md:gap-8 lg:gap-20">
                         <a class="poppins font-semibold underline-grow active" href="/" aria-label="Home">Home</a>
-                        <a class="poppins font-semibold underline-grow" href="./skill"
-                            aria-label="Skills">Skills</a>
+                        <a class="poppins font-semibold underline-grow" href="./skill" aria-label="Skills">Skills</a>
                         <a class="poppins font-semibold underline-grow" href="./project"
                             aria-label="Projects">Projects</a>
                         <a class="poppins font-semibold underline-grow" href="./contact"
@@ -177,13 +176,18 @@
                     </div>
 
                     <p class="font-sans text-gray-950 text-lg">
-                        My passion lies in crafting seamless digital experiences using the Laravel framework. With a
-                        deep-rooted expertise in Laravel and a keen eye for detail, I thrive on building robust,
-                        efficient, and user-friendly web applications. My journey in the realm of development is
-                        driven
-                        by the desire to innovate and elevate user experiences. Let's create something amazing
-                        together!
+                        I’m a full stack developer specializing in <strong>Laravel</strong> and web technologies. I work
+                        with <strong>CODE IT</strong>, where we provide affordable tech education and practical
+                        insights.
+                        <br>
+                        My expertise includes building dynamic web applications using <strong>PHP</strong>,
+                        <strong>Laravel</strong>, and <strong>Alpine.js</strong>, along with designing with
+                        <strong>Tailwind CSS</strong>, <strong>Vue.js</strong>, and <strong>Nuxt.js</strong>.
+
                     </p>
+
+
+
 
                     <div class="grid grid-cols-12">
                         <div class="col-span-4">
@@ -218,7 +222,7 @@
 
     <footer class="pt-8">
         <div class="text-xs text-center text-gray-600">
-            <p>Designed and Developed by Sudam Shrestha</p>
+            <p>Designed and Developed by <strong>Sudam Shrestha</strong></p>
         </div>
     </footer>
 
