--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <meta name="revisit-after" content="1 days">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="robots" content="index, follow">
-    
+
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
@@ -172,14 +172,14 @@
                                                 <label for="name" class="text-sm font-medium text-gray-700">Name</label>
                                                 <input type="text" name="name" id="name" required
                                                     class="mt-1 w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-yellow-500 focus:border-yellow-500"
-                                                    placeholder="Your Name">
+                                                    autocomplete="name" placeholder="Your Name">
                                             </div>
                                             <div>
                                                 <label for="email"
                                                     class="text-sm font-medium text-gray-700">Email</label>
                                                 <input type="email" name="email" id="email" required
                                                     class="mt-1 w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-yellow-500 focus:border-yellow-500"
-                                                    placeholder="you@example.com">
+                                                    autocomplete="email" placeholder="you@example.com">
                                             </div>
                                         </div>
                                         <div class="mt-6">
@@ -187,7 +187,7 @@
                                                 class="text-sm font-medium text-gray-700">Subject</label>
                                             <input type="text" name="subject" id="subject" required
                                                 class="mt-1 w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-yellow-500 focus:border-yellow-500"
-                                                placeholder="Subject">
+                                                autocomplete placeholder="Subject">
                                         </div>
                                         <div class="mt-6">
                                             <label for="message"
