--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,7 @@
                                                 class="text-sm font-medium text-gray-700">Subject</label>
                                             <input type="text" name="subject" id="subject" required
                                                 class="mt-1 w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-yellow-500 focus:border-yellow-500"
-                                                autocomplete placeholder="Subject">
+                                                autocomplete="subject" placeholder="Subject">
                                         </div>
                                         <div class="mt-6">
                                             <label for="message"
