--- a/contact.html
+++ b/contact.html
@@ -214,7 +214,7 @@
     <footer class="pt-8">
         <div class="relative flex justify-center items-center">
             <div class="absolute top-0 left-0 text-center w-full py-4 text-xs text-gray-600">
-                <p>Designed and Developed by Sudam Shrestha</p>
+                <p>Designed and Developed by <strong>Sudam Shrestha</strong></p>
             </div>
         </div>
     </footer>
