--- a/skill.html
+++ b/skill.html
@@ -219,7 +219,7 @@
 
     <footer class="pt-8">
         <div class="text-xs text-center text-gray-600">
-            <p>Designed and Developed by Sudam Shrestha</p>
+            <p>Designed and Developed by <strong>Sudam Shrestha</strong></p>
         </div>
     </footer>
 
