--- a/skill.html
+++ b/skill.html
@@ -19,16 +19,17 @@
     <meta name="revisit-after" content="1 days">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="robots" content="index, follow">
-    
+
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
           "@type": "Portfolio",
           "name": "Sudam Shrestha",
           "url": "https://www.sudamshrestha.com.np",
-          "logo": "https://www.sudamshrestha.com.np/images/logo.png",
+          "logo": "https://www.sudamshrestha.com.np/images/logo.png"
         }
     </script>
+
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link href="./css/style.css" rel="stylesheet">
