--- a/project.html
+++ b/project.html
@@ -28,9 +28,10 @@
           "@type": "Portfolio",
           "name": "Sudam Shrestha",
           "url": "https://www.sudamshrestha.com.np",
-          "logo": "https://www.sudamshrestha.com.np/images/logo.png",
+          "logo": "https://www.sudamshrestha.com.np/images/logo.png"
         }
     </script>
+        
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link href="./css/style.css" rel="stylesheet">
