--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           "@type": "Portfolio",
           "name": "Sudam Shrestha",
           "url": "https://www.sudamshrestha.com.np",
-          "logo": "https://www.sudamshrestha.com.np/images/logo.png",
+          "logo": "https://www.sudamshrestha.com.np/images/logo.png"
         }
     </script>
 
