--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sudam Shrestha - Contact Me</title>
-    <meta name="keywords"
-        content="Sudam Shrestha, contact, get in touch, hire web developer, web developer Nepal, full stack developer contact, freelance web developer, CODE IT, Dharan, Nepal">
+    <title>Contact Sudam Shrestha - Full Stack Developer</title>
     <meta name="description"
-        content="Get in touch with Sudam Shrestha, a full-stack developer based in Dharan, Nepal. Whether you're looking to discuss a project, hire a web developer, or inquire about services, reach out through this contact page.">
+        content="Get in touch with Sudam Shrestha, a full stack developer specializing in PHP, Laravel, Vue.js, and Tailwind CSS.">
+    <meta name="keywords"
+        content="Sudam Shrestha, contact, full stack developer, PHP, Laravel, web developer, CODE IT, Dharan">
     <meta property="og:title" content="Contact Sudam Shrestha - Full Stack Developer">
     <meta property="og:description"
         content="Explore the portfolio of Sudam Shrestha, a skilled full-stack developer from Dharan, Nepal. Specializing in Laravel, PHP, Vue.js, and Tailwind CSS, showcasing projects and skills in web development.">
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/contact">
     <meta property="og:site_name" content="Sudam Shrestha" />
-    <link rel="canonical" href="https://www.sudamshrestha.com.np" />
+    <link rel="canonical" href="https://www.sudamshrestha.com.np/contact" />
     <meta name="language" content="English">
     <meta name="revisit-after" content="1 days">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -25,12 +25,25 @@
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
-          "@type": "Portfolio",
+          "@type": "Person",
           "name": "Sudam Shrestha",
           "url": "https://www.sudamshrestha.com.np",
-          "logo": "https://www.sudamshrestha.com.np/images/logo.png"
+          "jobTitle": "Full Stack Developer",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Dharan",
+            "addressCountry": "Nepal"
+          },
+          "email": "sudamshrestha939@gmail.com",
+          "telephone": "+977-9704508525",
+          "sameAs": [
+            "https://www.facebook.com/sudam.shrestha.98/",
+            "https://github.com/Sudam939",
+            "https://www.linkedin.com/in/sudam-shrestha-59a15126a"
+          ]
         }
-    </script>
+        </script>
+
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link href="./css/style.css" rel="stylesheet">
