--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sudam Shrestha - Full Stack Developer</title>
+    <title>Sudam Shrestha - Full Stack Developer | PHP, Laravel, Vue.js Expert</title>
     <meta name="description"
-        content="I am Sudam Shrestha, a full-stack developer specializing in PHP, Laravel, Vue.js, and Tailwind CSS. Explore my portfolio to see my projects, skills, and experience in web development. Based in Dharan, Nepal, I am passionate about creating impactful and efficient web applications.">
+        content="Sudam Shrestha, a full stack developer from Dharan, Nepal, specializes in PHP, Laravel, Vue.js, Tailwind CSS, and modern web development.">
     <meta name="keywords"
-        content="Sudam, Sudam Shrestha, Laravel, Full Stack Developer, Code IT, PHP, Web Development, Portfolio, Nepal, Software Engineer">
-    <meta property="og:title" content="Sudam Shrestha - Full Stack Developer | Portfolio">
+        content="Sudam Shrestha, full stack developer, PHP, Laravel, Vue.js, Tailwind CSS, web development, CODE IT, Dharan">
+    <meta property="og:title" content="Sudam Shrestha - Full Stack Developer | PHP, Laravel, Vue.js Expert">
     <meta property="og:description"
-        content="Explore the portfolio of Sudam Shrestha, a skilled Full Stack Developer from Dharan, Nepal. Specializing in Laravel, PHP, Vue.js, and Tailwind CSS, showcasing my projects and skills.">
-    <meta property="og:image" content="https://www.sudamshrestha.com.np/images/hero.webp">
+        content="Learn about Sudam Shrestha, a professional full stack developer specializing in PHP, Laravel, Vue.js, and Tailwind CSS.">
+    <meta property="og:url" content="https://www.sudamshrestha.com.np/">
+    <meta property="og:image" content="https://www.sudamshrestha.com.np/images/profile.jpg">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Sudam Shrestha" />
@@ -25,12 +26,27 @@
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
-          "@type": "Portfolio",
+          "@type": "Person",
           "name": "Sudam Shrestha",
-          "url": "https://www.sudamshrestha.com.np",
-          "logo": "https://www.sudamshrestha.com.np/images/logo.png"
+          "jobTitle": "Full Stack Developer",
+          "worksFor": {
+            "@type": "Organization",
+            "name": "CODE IT"
+          },
+          "url": "https://www.sudamshrestha.com.np/",
+          "sameAs": [
+            "https://github.com/Sudam939",
+            "https://www.linkedin.com/in/sudam-shrestha-59a15126a",
+            "https://www.facebook.com/sudam.shrestha.98/"
+          ],
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Dharan",
+            "addressCountry": "Nepal"
+          }
         }
     </script>
+        
 
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
@@ -183,10 +199,7 @@
                         My expertise includes building dynamic web applications using <strong>PHP</strong>,
                         <strong>Laravel</strong>, and <strong>Alpine.js</strong>, along with designing with
                         <strong>Tailwind CSS</strong>, <strong>Vue.js</strong>, and <strong>Nuxt.js</strong>.
-
                     </p>
-
-
 
 
                     <div class="grid grid-cols-12">
@@ -213,7 +226,7 @@
                             CV</a>
 
                         <a class="text-lg md:text-xl btn rounded-2xl px-8 lg:px-20 xl:px-28 py-2 font-semibold bg-[#e5e5e6] border border-gray-600"
-                            href="./contact" aria-label="Hire Me">Hire Me</a>
+                            href="/contact" aria-label="Hire Me">Hire Me</a>
                     </div>
                 </div>
         </section>
