--- a/project.html
+++ b/project.html
@@ -5,33 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudam Shrestha - Projects</title>
-    <meta name="keywords"
-        content="Sudam Shrestha, web development projects, portfolio projects, Laravel projects, PHP projects, Vue.js projects, Nuxt.js projects, full stack developer, CODE IT, Dharan, Nepal">
+    <title>Sudam Shrestha - Web Development Projects</title>
     <meta name="description"
-        content="Explore the portfolio projects of Sudam Shrestha, a full-stack developer specializing in Laravel, PHP, Vue.js, and Tailwind CSS. Discover how I bring web applications to life with innovative solutions and efficient coding practices.">
-    <meta property="og:title" content="Sudam Shrestha - Projects">
+        content="Explore Sudam Shrestha's web development projects including work in PHP, Laravel, Vue.js, Tailwind CSS, and more.">
+    <meta name="keywords"
+        content="Sudam Shrestha, web development projects, PHP, Laravel, Vue.js, Tailwind CSS, full stack development">
+    <meta property="og:title" content="Sudam Shrestha - Web Development Projects">
     <meta property="og:description"
-        content="Browse through Sudam Shrestha's projects, showcasing web development work with Laravel, PHP, Vue.js, and Tailwind CSS. Discover innovative solutions and detailed examples of my work.">
-    <meta property="og:image" content="https://www.sudamshrestha.com.np/images/hero.webp">
+        content="Explore the projects developed by Sudam Shrestha, showcasing expertise in PHP, Laravel, and other web technologies.">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/project">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Sudam Shrestha" />
-    <link rel="canonical" href="https://www.sudamshrestha.com.np" />
+    <link rel="canonical" href="https://www.sudamshrestha.com.np/project">
     <meta name="language" content="English">
     <meta name="revisit-after" content="1 days">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="robots" content="index, follow">
-    
+
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
-          "@type": "Portfolio",
-          "name": "Sudam Shrestha",
-          "url": "https://www.sudamshrestha.com.np",
-          "logo": "https://www.sudamshrestha.com.np/images/logo.png"
+          "@type": "CreativeWork",
+          "name": "Sudam Shrestha's Web Development Projects",
+          "creator": {
+            "@type": "Person",
+            "name": "Sudam Shrestha"
+          },
+          "description": "Explore web development projects by Sudam Shrestha, showcasing expertise in PHP, Laravel, Vue.js, and more.",
+          "url": "https://www.sudamshrestha.com.np/project"
         }
     </script>
-        
+
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link href="./css/style.css" rel="stylesheet">
@@ -166,7 +170,8 @@
                     <div class="lg:flex items-center justify-center">
                         <div class="rounded-lg shadow-lg pb-10 w-full">
                             <div class="container mx-auto">
-                                <h2 class="text-3xl font-bold text-gray-900 mb-6">My Projects</h2>
+                                <h1 class="mainfont text-3xl  font-bold text-gray-900">Projects by Sudam Shrestha</h1>
+                                <h2 class="mainfont text-xl font-bold text-gray-900 mb-6">Featured Projects</h2>
                                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                                     <!-- Project 1 -->
                                     <div class="gallery__item">
@@ -193,7 +198,8 @@
                                     <!-- Project 3 -->
                                     <div class="gallery__item">
                                         <a href="https://www.cctdharan.edu.np/" target="_blank">
-                                            <img loading="lazy" src="/images/projects/cct.png" alt="Central Campus of Technology"
+                                            <img loading="lazy" src="/images/projects/cct.png"
+                                                alt="Central Campus of Technology"
                                                 class="w-full h-full object-cover rounded-t-lg">
                                             <i class="fa-solid fa-link gallery__icon"></i>
 
@@ -228,7 +234,8 @@
                                     <!-- Project 6 -->
                                     <div class="gallery__item">
                                         <a href="https://homelinkservice.com/" target="_blank">
-                                            <img loading="lazy" src="/images/projects/homelink.png" alt="Home Link Services"
+                                            <img loading="lazy" src="/images/projects/homelink.png"
+                                                alt="Home Link Services"
                                                 class="w-full h-full object-cover rounded-t-lg">
                                             <i class="fa-solid fa-link gallery__icon"></i>
 
