--- a/skill.html
+++ b/skill.html
@@ -8,13 +8,14 @@
     <meta name="keywords"
         content="Sudam Shrestha, developer skills, web development skills, PHP, Laravel, Vue.js, Nuxt.js, Tailwind CSS, frontend skills, backend skills, full stack developer, CODE IT, Dharan, Nepal">
     <meta name="description"
-        content="Learn about the technical skills and expertise of Sudam Shrestha, a full-stack developer. Proficient in PHP, Laravel, Vue.js, Nuxt.js, Tailwind CSS, and more, I am equipped to handle both frontend and backend development.">
+        content="Explore the skills of Sudam Shrestha, a full-stack developer proficient in PHP, Laravel, Vue.js, Tailwind CSS, and more.">
     <meta property="og:title" content="Sudam Shrestha - Skills">
     <meta property="og:description"
-        content="Learn about Sudam Shrestha's technical skills and expertise in web development. From PHP and Laravel to Vue.js and Tailwind CSS, explore the skills that define my approach to building web applications.">
+        content="Discover Sudam Shrestha's technical skills in web development, including PHP, Laravel, Vue.js, and Tailwind CSS.">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/skill">
+    <meta property="og:image" content="https://www.sudamshrestha.com.np/images/skills/skills.png">
     <meta property="og:site_name" content="Sudam Shrestha" />
-    <link rel="canonical" href="https://www.sudamshrestha.com.np" />
+    <link rel="canonical" href="https://www.sudamshrestha.com.np/skill" />
     <meta name="language" content="English">
     <meta name="revisit-after" content="1 days">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -23,12 +24,25 @@
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
-          "@type": "Portfolio",
+          "@type": "Person",
           "name": "Sudam Shrestha",
           "url": "https://www.sudamshrestha.com.np",
-          "logo": "https://www.sudamshrestha.com.np/images/logo.png"
+          "image": "https://www.sudamshrestha.com.np/images/profile.png",
+          "jobTitle": "Full Stack Developer",
+          "worksFor": {
+            "@type": "Organization",
+            "name": "CODE IT"
+          },
+          "sameAs": [
+            "https://www.facebook.com/sudam.shrestha.98/",
+            "https://www.linkedin.com/in/sudam-shrestha-59a15126a",
+            "https://github.com/Sudam939"
+          ],
+          "knowsAbout": ["PHP", "Laravel", "Vue.js", "Nuxt.js", "Tailwind CSS", "JavaScript", "HTML", "CSS"],
+          "description": "Sudam Shrestha is a full stack developer with expertise in PHP, Laravel, Vue.js, Tailwind CSS, and more."
         }
     </script>
+
 
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
